<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalScreen3">

    <TextView
        android:id="@+id/genre"
        android:layout_width="269dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:text="@string/titleGenre"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="361dp"
        android:layout_height="329dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre">

        <RadioButton
            android:id="@+id/rockBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:checked="true"
            android:text="@string/rock" />

        <RadioButton
            android:id="@+id/popBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/pop" />

        <RadioButton
            android:id="@+id/rapBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/rap" />

        <RadioButton
            android:id="@+id/classicalBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/classical" />

        <RadioButton
            android:id="@+id/altBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/alt" />

        <RadioButton
            android:id="@+id/classicRockBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/classicRock" />
    </RadioGroup>

    <Button
        android:id="@+id/nextBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/next2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>